--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,2 @@
-<p>ServerComponent</p>
+<!-- <p>{{ 'Server' }} with ID {{ serverId }} is {{ serverStatus }}</p> -->
+<p>{{ 'Server' }} with ID {{ serverId }} is {{ getServerStatus() }}</p>
