--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
 <div class = "container">
   <div class = "row">
     <div class = "col-xs-12">
-      <h3>I'm in the AppComponent!</h3>
+      <h3>Hello from the App Component of Angular 5!</h3>
       <hr>
       <app-servers></app-servers>
     </div>
