--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,15 +1,21 @@
-<label>Server Name</label>
+<label>Server Name</label><br>
+<!-- <input
+    type = "text"
+    class = "form-control"
+    (input) = "onUpdateServerName($event)"> -->
 <input
     type = "text"
     class = "form-control"
-    (input) = "onUpdateServerName()">
-
+    [(ngModel)] = "serverName">
+<br>
+<!-- <p>{{ serverName }}</p> -->
 <button 
     class = "btn btn-primary"
     [disabled] = "!allowNewServer"
     (click) = "onCreateServer()">Add Server</button>
 <!-- <p>{{ allowNewServer }}</p> -->
 <!-- <p [innerText] = "allowNewServer"></p> -->
-<p>{{ serverCreationStatus }}</p>
+<!-- <p>{{ serverCreationStatus }}</p> -->
+<p *ngIf = "serverCreated">Server was created, server name is {{ serverName }}</p>
 <app-server></app-server>
 <app-server></app-server>
