--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,2 +1,6 @@
 <!-- <p>{{ 'Server' }} with ID {{ serverId }} is {{ serverStatus }}</p> -->
-<p>{{ 'Server' }} with ID {{ serverId }} is {{ getServerStatus() }}</p>
+<p 
+    [ngStyle] = "{ backgroundColor: getColor() }"
+    [ngStyle] = "{online: serverStatus === 'online'}">
+    {{ 'Server' }} with ID {{ serverId }} is {{ getServerStatus() }}
+</p>
