--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,10 +37,10 @@
       <button class = "btn btn-primary" (click) = "onToggleDetails()">Display Details</button>
       <p *ngIf = "showSecret">Secret Password = tuna</p>
       <div
-        *ngFor = "let logItem of log"
-        [ngStyle] = "[ backgroundColor: logItem >= 5 ? 'blue' : 'transparent' ]"
-        [ngClass] = "">
-
+        *ngFor = "let logItem of log; let i = index"
+        [ngStyle] = "{ backgroundColor: i >= 4 ? 'blue' : 'transparent' }"
+        [ngClass] = "{ 'white-text': logItem >= 5 }">
+      {{logItem}}
       </div>
       <app-servers></app-servers>
     </div>
